OG 임시설정, 블루인링크, 흥얼마을 시간 수정

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,21 @@
 <html lang="en">
 
 <head>
+    <!-- 제목 설정 -->
+    <meta name="title" property="og:title" content="SKETCH VILLAGE 제목" />
+
+    <!-- 설명문 설정 -->
+    <meta name="description" property="og:description" content="동아리페스티벌 스케치빌리지 설명문" />
+
+    <!-- 이미지 설정 -->
+    <meta name="image" property="og:image" content="asset/Logo/Logo.png" />
+
+    <!-- URL 설정 -->
+    <meta name="url" property="og:url" content="https://sketchvillage.sku-sku.com/" />
+
+    <!-- 언어 설정 -->
+    <meta property="og:locale" content="ko_KR" />
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/assets/Logo/sketchLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
