--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <!-- 제목 설정 -->
-    <meta name="title" property="og:title" content="SKETCH VILLAGE 제목" />
+    <meta name="title" property="og:title" content="Sketch Village" />
 
     <!-- 설명문 설정 -->
-    <meta name="description" property="og:description" content="동아리페스티벌 스케치빌리지 설명문" />
+    <meta name="description" property="og:description" content="2023 동아리 페스티벌 보러가기" />
 
     <!-- 이미지 설정 -->
-    <meta name="image" property="og:image" content="asset/Logo/Logo.png" />
+    <meta name="image" property="og:image" content="assets/Logo/ogimg.png" />
 
     <!-- URL 설정 -->
-    <meta name="url" property="og:url" content="https://sketchvillage.sku-sku.com/" />
+    <meta name="url" property="og:url" content="https://Sketch39.sku-sku.com" />
 
     <!-- 언어 설정 -->
     <meta property="og:locale" content="ko_KR" />
